--- a/index.html
+++ b/index.html
@@ -7,16 +7,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section>
+<section class="top-banner">
 <div  class="uppersidedesign">
     <h1>Welcome To</h1>
     <h1><span class="namehighlight">Shakil Kazi</span>'s Web</h1>
     <h3>🌐 Responsive Design Mastery:</h3>
     <p>Learn the art of responsive web design, ensuring your site looks stunning and functions flawlessly across smartphones, tablets, and desktops. Dive into the latest techniques and CSS frameworks to create a fluid and dynamic user experience.</p>
+    <a class="linkbutton" target="_blank" href="https://www.fiverr.com/oliear/build-and-develop-a-highly-responsive-website-for-you">HIRE ME</a>
 </div>
  <div  class="uppersidedesign">
     <img src="images/jhankar.png" alt="">
  </div>
+</section>
+<br>
+
+<section class="top-banner-02">
+    <div  class="uppersidedesign">
+        <img src="images/jhankar2.png" alt="">
+     </div>
+    <div  class="uppersidedesign">
+        <h1>Want To Reach The Highest</h1>
+        <h3>Commited to excellence and client satisfaction</h3>
+        <p>Elevate your web development journey with our guide on building highly responsive websites, where excellence meets client satisfaction. Learn the art of responsive design, implement user-centric interfaces, and optimize performance for an unparalleled browsing experience. We prioritize a client-centric approach, emphasizing effective communication, measurable success through analytics, and the integration of user feedback. Stay ahead of trends, create global impact, and build lasting partnerships with a website that not only meets but exceeds client expectations. Your success is not just a goal; it's a commitment to excellence that builds enduring relationships and sets you apart in the digital landscape.</p>
+        <a class="linkbutton" target="_blank" href="https://www.facebook.com/onemanstudiofacebook/">Visit My Facebook</a>
+    </div>
+
+    </section><br>
+
+<section class="experiencearea">
+    <h2>Experience</h2>
+    <div id= "full-stack" class="uppersidedesign single-design">
+<h2>Social Media Marketing Expert</h2>
+<h3 class="namehighlight">2016 to Present</h3>
+<p>Our goal extends beyond creating a responsive website; it's about fostering lasting partnerships. By consistently delivering exceptional results and prioritizing client         satisfaction, you'll not only meet your goals but build a reputation that attracts new clients and retains existing ones.Embark on this journey with the commitment to reach the highest standards, and witness the satisfaction of clients who experience the impact of a website that goes above anbeyond their expectations. Your success is our mission!</p>
+    </div>
+<div id="full-stack2" class="uppersidedesign single-design">
+<h2>Full Stack Web Developer</h2>
+<h3 class="namehighlight">2017 to Present</h3>
+<p>In the fast-paced world of web development, staying ahead of trends is crucial. Arm yourself with insights into emerging technologies and design trends to offer clients a website that not only meets current standards but anticipates future needs, ensuring long-term satisfaction.</p>
+</div>
 </section>
 </body>
 </html> 
